Correcciones y mejoras memoria

--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -367,7 +367,7 @@
 \newcommand{\nombre}{Saúl Martín Ibáñez} %%% cambio de comando
 
 % Datos de portada
-\title{título del TFG}
+\title{Herramientas de realidad aumentada}
 \author{\nombre}
 \tutor{Pedro Luis Sánchez Ortega}
 \cotutor{Álvar Arnaiz González}
