--- a/Documentación/tex/1_Introduccion.tex
+++ b/Documentación/tex/1_Introduccion.tex
@@ -3,7 +3,7 @@
 Las tecnologías de realidad aumentada, consisten en técnicas que consiguen combinar objetos virtuales con objetos del mundo real en tiempo directo. 
 Estas tecnologías hoy en día están en gran auge en parte por la mejoras de las tecnologías y hardware necesarios. Ya en el 2010 fue seleccionada por la revista Time en el top 10 de tendencias tecnológicas, concretamente en el cuarto puesto~\cite{fletcher_2010}. 
 
-Durante la última década ha crecido mucho, hasta el punto en el que actualmente se pueden encontrar aplicadas en múltiples campos de nuestro día a día. Podemos encontrar ejemplos en muchos tipos de aplicaciones de dispositivos móviles, juegos como el Pokemon Go \footnote{Una de las aplicaciones más conocidas por su uso de la realidad aumentada, mediante la cual permite superponer un Pokemon allí donde nos encontremos}. Aplicaciones educativas que ofrecen nuevas técnicas de aprendizaje, como el MergeCube, o aplicaciones de navegación como Google Maps\footnote{\url{https://support.google.com/maps/thread/12924999?hl=es}}, que añadió un modo de realidad aumentada con el que superponer las indicaciones de la ruta a seguir en la imagen captadas por la cámara del terminal. También hay aplicaciones para uso empresarial como Vuforia, que pueden ofrecer apoyo para el mantenimiento y construcción de maquinarias, en la medicina, etc.
+Durante la última década ha crecido mucho, hasta el punto en el que actualmente se pueden encontrar aplicadas en múltiples campos de nuestro día a día. Podemos encontrar ejemplos en muchos tipos de aplicaciones de dispositivos móviles, juegos como el Pokemon Go. Aplicaciones educativas que ofrecen nuevas técnicas de aprendizaje, como el MergeCube, o aplicaciones de navegación como Google Maps\footnote{\url{https://support.google.com/maps/thread/12924999?hl=es}}, que añadió un modo de realidad aumentada con el que superponer las indicaciones de la ruta a seguir en la imagen captadas por la cámara del terminal. También hay aplicaciones para uso empresarial como Vuforia, que pueden ofrecer apoyo para el mantenimiento y construcción de maquinarias, en la medicina, etc.
 
 \imagen{Introducción}{Imágenes de diferentes ejemplos de realidad aumentada \cite{fotoAR1}, \cite{fotoAR2}, \cite{fotoAR3}, \cite{fotoAR4}.}
 
@@ -12,5 +12,7 @@ Este gran crecimiento es posible gracias al avance en las tecnologías móviles 
 Se pueden distinguir dos tipos de realidad aumentada principalmente: los que usan marcadores y los que detectan el entorno. En la detección de marcadores se utilizará una imagen o código QR como eje de referencia para iniciar la realidad aumentada y situar los elementos virtuales en su correcta posición. 
 Y el segundo tipo la detección del entorno, la cual podrá detectar diferentes planos y paredes reales que podrán usar como referencias, sin la necesidad de necesitar una imagen o código QR concreto.
 
+
+En el proyecto estudiaremos diferentes herramientas de realidad aumentada, comparándolas y posteriormente escogeremos una con la que desarrollar un ejemplo en el que poner en practica las posibilidades de la herramienta. 
 
 
