--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -10,8 +10,7 @@ La realidad virtual (VR--Virtuality Reality) se diferencia de la anterior, en qu
 
 El concepto de realidad aumentada fue utilizado por primera vez en 1901 por Frank L Baum en su novela The Master Key( ref), en ella presenta una historia que a un niño le otorgan un regalo, que son como unas gafas que da a entender un concepto de realidad aumentada.
 
-Décadas mas tarde Morton Helling conocido como el padre de la realidad virtual, invento el Sensorama en 1957 y lo patento en 1962
-, se trataba de una maquina que intentaba una mayor inmersión con la combinación de una pantalla, ventiladores, olores, una silla que se movía y sonido estero. Morton también diseño TELESPHERE MASK, un aparato que recuerda mucho a las gafas de realidad virtual que conocemos hoy en día.
+Décadas mas tarde Morton Helling, conocido como el padre de la realidad virtual, inventó el Sensorama en 1957 y lo patentó en 1962, se trataba de una maquina que intentaba una mayor inmersión con la combinación de una pantalla, ventiladores, olores, una silla que se movía y sonido estéreo. Morton también diseñó TELESPHERE MASK, un aparato que recuerda mucho a las gafas de realidad virtual que conocemos hoy en día.
 
 \imagen{Sensorama}{ Sensorama \cite{ARhistory}}
 
@@ -19,16 +18,16 @@ En 1968 el profesor Ivan Sutherland junto a su estudiante Bob Sproull, Quintin F
 
 \imagen{EspadaDeDamocles}{La espada de Damocles \cite{EspadaDamocles}}
 
-En 1975 Myron Krueger creo VideoPlace, un sistema con el que lograba que el usuario pudiera interaccionar con la pantalla y moviendo objetos en en tiempo real.\cite{ARevolution}
+En 1975 Myron Krueger creó VideoPlace, un sistema con el que lograba que el usuario pudiera interaccionar con la pantalla y moviendo objetos en en tiempo real\cite{ARevolution}.
 
 
 
-En 1981 Dan Reitan utiliza por primera para las retransmisiones meteorológicas, símbolos meteorológicos para complementar los informativos.
+En 1981 Dan Reitan utiliza por primera vez para las retransmisiones meteorológicas, símbolos meteorológicos para complementar los informativos.
 
-Ya en la década de los 90, Tom Caudell por primera vez utiliza el termino realidad aumentada , para referirse a los dispositivos que exponían un esquema de montaje sobre las piezas para facilitar el proceso de montaje. 
-Dos años mas tarde , Louis Rosenberg construiría el primer sistema inmersivo de realidad aumentada.  Se trataba de Virtual Fixtures, que proyectaba la imagen de unos brazos roboticos.
+Ya en la década de los 90, Tom Caudell por primera vez utiliza el término realidad aumentada, para referirse a los dispositivos que exponían un esquema de montaje sobre las piezas para facilitar el proceso de montaje. 
+Dos años mas tarde, Louis Rosenberg construiría el primer sistema inmersivo de realidad aumentada.  Se trataba de Virtual Fixtures, que proyectaba la imagen de unos brazos robóticos.
 
-En 1994 se crea KARMA ( Knowledge based Augmented Reality for Maintenance Assistance), creado por  Steven Feiner, Blair MacIntyre y Doree Seligmann. Se trata de un sistema de pruebas para el diseño de entornos de realidad aumentada, para usarse en tareas de mantenimiento y reparación.
+En 1994 se crea KARMA (Knowledge based Augmented Reality for Maintenance Assistance), creado por  Steven Feiner, Blair MacIntyre y Doree Seligmann. Se trata de un sistema de pruebas para el diseño de entornos de realidad aumentada, para usarse en tareas de mantenimiento y reparación.
 
 Ronald T. Azuma  en 1997 escribió <<A survey of Augmented Reality>>, donde explora los diferentes usos que podría tener la realidad aumentada en medicina, producción, investigación, mecánica y entretenimiento.
 
@@ -43,7 +42,7 @@ En el 2000, se crea ARQuake por Bruce H. Thomas, el primer juego de realidad aum
 En 2008 se funda WikiTude, con el objetivo de meterse en la aplicaciones de realidad aumentada móvil. 
 En 2009 ARToolKit se incorpora en Adobe Flash, consiguiendo así que la realidad aumentada pueda ejecutarse desde un navegador Web.
 
-En 2012 Google presenta las Google Glass,en su intento por llevar la realidad aumentada al día a día de las personas a través de unas gafas.  
+En 2012 Google presenta las Google Glass, en su intento por llevar la realidad aumentada al día a día de las personas a través de unas gafas.  
 
 En 2015 Microsoft presenta las Hololens, sus gafas de realidad aumentada.
 
@@ -134,7 +133,7 @@ Para acceder al contenido AR almacenado en el servidor de ZapWorks, utiliza los 
 
 Kudan\footnote{\url{https://www.xlsoft.com/en/products/kudan/index.html}} 
 se trata de un SDK, con la capacidad de soportar AR tanto con marcadores y como sin ellos. En principio Kudan no tiene un limite de marcadores que pueda detectar al mismo tiempo, pero se puede incluir un limite para que la aplicación tenga un rendimiento adecuado. 
-Posee soporte para APIs nativas, como ObjetiveC para iOS, Java para Android y Unity.~\cite{kudan_developer_hub}.
+Posee soporte para APIs nativas, como ObjetiveC para iOS, Java para Android y Unity~\cite{kudan_developer_hub}.
 
 El motor de Kudan está escrito en C++ y optimizado con programación en ensamblador, dando un mayor rendimiento y estabilidad, con el menor impacto de memoria.
 Usa la tecnología SLAM (Simultaneous Localization and Mapping) para el reconocimiento del escenario.
@@ -147,7 +146,7 @@ En la imagen \ref{fig:marta_2} podemos ver un ejemplo de la aplicación M.A.R.T.
 
 \subsection{Vuforia}\label{sub:Def_Vuforia}
 
-Vuforia\footnote{\url{https://developer.vuforia.com/}} es un kit de desarrollo ( SDK) para aplicaciones de AR, para las plataformas de Android, iOS, Windows, Unity y HoloLens. Fue creado por Qualcomm Connected Experience en 2010, y en 2015 PTC inc lo compró \cite{simonetti2013vuforia}.
+Vuforia\footnote{\url{https://developer.vuforia.com/}} es un kit de desarrollo ( SDK) para aplicaciones de AR, para las plataformas de Android, iOS, Windows, Unity y HoloLens. Fue creado por Qualcomm Connected Experience en 2010, y en 2015 PTC inc lo compró~\cite{simonetti2013vuforia}.
 
 Vuforia proporciona una API en C++, Java, Objective-C++ y los lenguajes de .NET mediante Unity.
 
@@ -190,27 +189,23 @@ Wikitude\footnote{\url{https://www.wikitude.com/}} se trata de un SDK de realida
 	\item Reconocimiento de imágenes.
 	\item Reconocimiento de objetos.
 	\item Reconocimiento de múltiples marcadores: Permite reconocer múltiples marcadores de forma simultánea.
-	\item Instant Tracking: reconocimiento sin la necesidad de marcadores, permitiendo superponer elementos virtuales en superficies detectadas con la tecnologia Slam Instant Tracking.
-	
-	\item Seguimiento extendido: Permite que un elemento virtual que se ha superpuesto en un punto o marcador determinado, persista aunque dicho punto se salga del campo de visión de la cámara.
-	
+	\item Instant Tracking: reconocimiento sin la necesidad de marcadores, permitiendo superponer elementos virtuales en superficies detectadas con la tecnologia Slam Instant Tracking.	
+	\item Seguimiento extendido: Permite que un elemento virtual que se ha superpuesto en un punto o marcador determinado, persista aunque dicho punto se salga del campo de visión de la cámara.	
 	\item Geo AR: Permite agregar contenido de realidad aumentada basándose en la ubicación, valiéndose del GPS y demás sensores para determinar la ubicación.
-	\item Cloud Recognition: Ofrece la posibilidad de guardar en línea los datos de imágenes/marcadores para las aplicaciones.
-	
+	\item Cloud Recognition: Ofrece la posibilidad de guardar en línea los datos de imágenes/marcadores para las aplicaciones.	
 \end{itemize}
 
 Wikitude esta disponible para Android, iOS, Windows y Smart Glasses.
 También posee un amplio soporte para frameworks de desarrollo : Andoid, iOS, Windows, Unity, Cordova, Xamarin, Flutter, Titanium. 
 Los sistemas deberán cumplir los requisitos indicados en el siguiente enlace: \url{https://www.wikitude.com/documentation/latest/android/supporteddevices.html#supported-devices}.
 
-\subsection{ArUco}
 
 
 \subsection{OpenCV}
 
 OpenCV\footnote{\url{https://opencv.org/}} es una librería de visión artificial y machine learning, de código abierto. Tiene una licencia BSD por lo que facilita su uso y modificación para las empresas. Cuenta con más de 2500 algoritmos optimizados. Estos pueden emplearse para detectar y reconocer rostros, identificación de objetos, clasificar acciones humanas en vídeos, seguir los movimientos de la cámara, rastrear objetos en movimiento, extraer modelos 3D de objetos, producir nubes de puntos 3D de cámaras estéreo, seguir el movimiento de los ojos, reconocer paisajes y establecer marcadores para usarlos en realidad aumentada.
 
-Esta disponible en interfaces para C++,Python, Java y MATLAB y es compatible con Windows, Linux, Android y Mac OS.
+Esta disponible en interfaces para C++, Python, Java y MATLAB y es compatible con Windows, Linux, Android y Mac OS.
 
 
 \subsection{8thWall}
@@ -231,11 +226,11 @@ Tiene soporte con los frameworks 3D A-Frame, three.js, babylon.js, Amazon Sumeri
 
 Requiere en iOS, iOS11 o superior, y el navegador Safari. En Android los navegadores soportados son; Chrome, Chromium,Firefox, Android WebViews.
 
-\subsection{Tabla comparativa}
-En la tabla \ref{tabla:comparacionHerramientas} se puede observar una comparativa entre las principales funcionalidades de las herramientas.
+\subsection{Resumen y comparativa de herramientas}
+En la tabla \ref{tabla:comparacionHerramientas} se puede observar una comparativa entre las principales funcionalidades de las herramientas. Se expondrán si es MultiTarget (MT), si pose realidad sin marcadores (SM), las plataformas para las que está disponible, el tipo de licencia, libre (L) o comercial (C), el precio y tipo de requisitos.
 
 \label{tablaComparacion}\tablaSmall{Comparativa herramientas AR}{l c c c c c c}{comparacionHerramientas}
-{ \multicolumn{1}{l}{-} & MultiTarget & Sin Marcador & Plataforma  & Licencia & Precio & Requisitos\\}{ 
+{ \multicolumn{1}{l}{} & MT & SM & Plataforma  & Licencia & Precio & Requisitos\\}{ 
 	ArCore & X&X&Android& L & 0\euro & Altos\\ 
 	ArKit &X&X&iOS &L & 0\euro &-\\
 	CoSpaces&X & &iOS/Android  &L y C & 75\euro año&Medios\\
@@ -268,71 +263,49 @@ En la tabla \ref{tabla:comparacionHerramientas} se puede observar una comparativ
 	
 	Se pueden clasificar los marcadores en \cite{linowes_babilinski_2017}:
 	
-	
-	
-	
+	\imagenPeque{market}{Ejemplo de un marcador~\cite{linowes_babilinski_2017}.}
+		
+	\imagenflotante{market2}{Ejemplo de marcadores codificados~\cite{linowes_babilinski_2017}.}
 		
 	\begin{itemize}
-		
-		\item \subsubsection{Marcadores}. El marcador mas básico es uno con un borde ancho. Su ventaja es que minimizan los costes de procesamiento y las posibilidades de error al reconocerlo. En la imagen \ref{marcador} podemos ver un ejemplo de un marcador simple.\\
-		
-		\label{marcador}\imagenPeque{market}{Ejemplo de un marcador\cite{linowes_babilinski_2017}.}	
-		
-		
-		
-		\item \subsubsection{Marcadores Codificados}
-		
-		Se trata de marcadores que poseen códigos de barra 2D, dentro del área de bordes patrones. En la imagen \ref{marcador} tenemos un ejemplo de distintos marcadores, que contienen diferentes patrones.
-	
-		\label{marcador2}\imagenflotante{market2}{Ejemplo de marcadores codificados\cite{linowes_babilinski_2017}.}
-		
-		\item \subsubsection{Imágenes}
-		
+		\item Marcadores: El marcador mas básico es uno con un borde ancho. Su ventaja es que minimizan los costes de procesamiento y las posibilidades de error al reconocerlo. En la imagen \ref{fig:market} podemos ver un ejemplo de un marcador simple.\\		
+		\item Marcadores Codificados:
+		Se trata de marcadores que poseen códigos de barra 2D, dentro del área de bordes patrones. En la imagen \ref{fig:market2} tenemos un ejemplo de distintos marcadores, que contienen diferentes patrones.
+		\item Imágenes:		
 		El poder usar imágenes evita tener que crear marcadores personalizados. El reconocimiento de imágenes entra en la categoría de seguimiento de características naturales. Su calidad como marcador, dependerá de si tiene un borde que defina claramente esa imagen, del contraste de sus colores o la complejidad de su composición.
-		
-	
-		
-		\item \subsubsection{Multiples Marcadores}
-		
+		\item Múltiples Marcadores:
 		Es el caso de usar mas de un marcador al mismo tiempo por la misma cámara. Permitiendo así tener distintos objetos en la misma escena simultáneamente. También es posible crearlos formado objetos geométricos, un ejemplo sería el Mergecube(Inluir referencia merge).
-		
-		\item \subsubsection{Reconocimiento de texto}
-		
+		\item Reconocimiento de texto:
 		Algunos SDK de realidad aumentada cuentan con la capacidad de distinguir textos. La precisión estará influenciada dependiendo del tipo de fuente de las letra. 
-		
-		\item \subsubsection{Formas Simples}
-		
+		\item Formas Simples:
 		Algunas aplicaciones tienen la capacidad de distinguir diferentes formas simples, como son cubos, cilindros. También pueden distinguir las medidas de las formas, pudiendo así diferenciar si un cubo es mas grande que otro.
+		\item Reconocimiento de objetos:		
+		Se trata del siguiente nivel, la capacidad de distinguir objetos. No solo reconocerá e identifica la forma y tamaño del objeto, también detalles característicos que le puedan diferenciar de otro. Vuforia por ejemplo cuenta con una funcionalidad llamada Vuforia Object Scanner, que permite escanear un objeto para una copia digital, que se podría usar como marcador. En la imagen \ref{fig:vuforia_recoObjeto} podemos ver un ejemplo de la aplicación de Vuforia, en la que escanea un coche.  
 		
-		\item \subsubsection{Reconocimiento de objetos}
-		
-		Se trata del siguiente nivel, la capacidad de distinguir objetos. No solo reconocerá e identifica la forma y tamaño del objeto, también detalles característicos que le puedan diferenciar de otro. Vuforia por ejemplo cuenta con una funcionalidad llamada Vuforia Object Scanner, que permite escanear un objeto para una copia digital, que se podría usar como marcador. En la imagen \ref{marcadorObject} podemos ver un ejemplo de la aplicación de Vuforia, en la que escanea un coche.  
-		
-		
-			
 	\end{itemize}
 
-\label{marcadorObject}\imagen{vuforia_recoObjeto}{Vuforia Object Scanner \cite{vuforia_scanner}.}	
+\imagen{vuforia_recoObjeto}{Vuforia Object Scanner \cite{vuforia_scanner}.}	
 
 
 
 
 
 
-	\subsubsection{Mergecube}
+	\subsubsection{Mergecube}\label{section:mergecube}
 	
 	El Mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por Merge, el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas.
-	\imagen{mergecube}{Mergecube  \cite{barker_2019}.} 
+	
+	\imagen{mergecube}{Mergecube~\cite{barker_2019}.} 
 	
 	\subsection{Detección del entorno}
 	
 	La detección del entorno trata de poder reconocer el entorno que la cámara capta y ser capaz de, sin la ayuda de un marcador, poder ubicar los modelos en el escenario de forma realista.
-	Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar qué objetos están mas o menos cerca, cuáles son una superficie plana, si se trata de un objeto que no tiene profundidad(una pared)...
+	Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar qué objetos están mas o menos cerca, cuáles son una superficie plana, si se trata de un objeto que no tiene profundidad (una pared)...
 	
 	\subsubsection{SLAM}
 	
 	Simultaneous Localization and Mapping, se trata de una técnica para estimar los movimientos de los sensores y reconstruir la estructura en un entorno desconocido. Cuando esta técnica se aplica en cámaras, se denomina visual SLAM(vSLAM), ya que se basara en la información visual recibida.
-	La mayoría de herramientas de realidad aumentada, que tienen la capacidad de detectar el entorno sin necesidad de marcadores, se basan en esta técnica \cite{taketomi2017visual}.
+	La mayoría de herramientas de realidad aumentada, que tienen la capacidad de detectar el entorno sin necesidad de marcadores, se basan en esta técnica~\cite{taketomi2017visual}.
 	
 	Los algoritmos de vSLAM, no solo son usados unicamente para la AR, también pueden ser aplicados para robótica, o los coches autónomos no tripulados.
 	
