--- a/Documentación/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/tex/4_Tecnicas_y_herramientas.tex
@@ -3,14 +3,14 @@
 
 \section{Técnicas de desarrollo}
 \subsection{CoSpaces}
-Para el desarrollo en CoSpace empece creando un nuevo proyecto. Dado que el ejemplo deberá funcionaran con el MergeCube, en las primeras opciones que nos da al crear el proyecto se podrá incluir.
+Para el desarrollo en CoSpace empecé creando un nuevo proyecto. Dado que el ejemplo deberá funcionarán con el MergeCube, en las primeras opciones que nos da al crear el proyecto se podrá incluir.
 Una vez creado el proyecto con el plug de Mergecube, tendremos un espacio de trabajo vació con el cubo de Mergecube en el centro. Esto se trata de una manera sencilla de poder crear un espacio de trabajo, por lo que no sería necesario de un alto nivel de conocimientos.
 
 Para añadir los elementos deseados en el entorno, cuenta con un sencillo panel desde el que seleccionar modelos que ofrece CoSpace, o la posibilidad de importar modelos 3D de una fuente externa, mediante un buscador en Google Poly o mediante una subida de archivos. CoSpaces es compatible con las extensiones obj, mtl, fbx, zip de modelos, y jpg, png, gif, svg, bmp de imágenes.
 
 En cuanto a la manipulación de los modelos, se trata de una manipulación muy sencilla y rápida de aprender, da la posibilidad de mover, rotar y escalar el modelo . El problema de esta manipulación es que es muy simple y no tan precisa, por ejemplo no permite mover objetos en diagonal. Para casos en los que se requiera más precisión habría que usar lo movimientos introduciendo las coordenadas exactas.
 
-Otro de los aspectos de la edición de los modelos es el cambio de colores y textura. No a todos los modelos se les puede cambiar la textura a tu gusto, el color en cambio si. Con los modelos importados hay más problemas a la hora de personalizar textura o color, pues si el modelo tiene diferentes capas, no las diferencia y cambiará todas del mismo color. 
+Otro de los aspectos de la edición de los modelos es el cambio de colores y textura. No a todos los modelos se les puede cambiar la textura a tu gusto, el color en cambio sí. Con los modelos importados hay más problemas a la hora de personalizar textura o color, pues si el modelo tiene diferentes capas, no las diferencia y cambiará todas del mismo color. 
 
 En algunos modelos predefinidos es posible escoger y activar animaciones, o diferentes estados para ese modelo. Por ejemplo en un modelo de un coche se puede escoger si tiene algunas puertas abiertas o no. La parte negativa es que no puedes definir tus propios estados o animaciones, por lo que unicamente es posible escoger entre las opciones que esos modelos predefinidos tengan. En todos los modelos es posible añadir un bocadillo para añadir un dialogo. También es posible añadir en todos los modelos ciertas físicas, pudiendo ajustando la masa del objeto, seleccionar si será un objeto estático, y alguna opción más, tal vez no es tan completo como otros software pero cumple.
 
@@ -102,7 +102,7 @@ En el menú en un principio se incorporo un cubo para realizar pruebas en el com
 
 
 \section{Herramientas de documentación}
-\subsection{LaTex}
+\subsection{\LaTeX} 
 Se trata de un sistema de composición de textos, con el objetivo de la creación de documentos de alta calidad tipográfica.
 \section{Herramientas de gestión}
 \subsection{GitHub}
