--- a/Documentación/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/Documentación/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -1,12 +1,12 @@
 \capitulo{5}{Aspectos relevantes del desarrollo del proyecto}
 
 \subsection{Formación}
-Para este proyecto ha sido necesario formarse mas en Unity....
+Para este proyecto ha sido necesario formarse en Unity, pues aunque contaba con conocimientos básicos de antemano, era necesario reforzar los conocimientos en cara al proyecto. Para ello se han seguido tanto videotutoriales como la documentación oficial de Unity y sus foros.
 Para el desarrollo en Unity ha sido necesario revisar tutoriales respecto algunas de sus configuraciones.
 Aunque contaba con la ventaja de que el lenguaje C\# usado por los scripts de Unity ya lo conocía, lo cual ha facilitado el proceso de desarrollo en Unity en esta parte. También el hecho de contar con un buen manual de usuario, y una comunidad de usuarios notable.
 Formación en técnicas de Unity para hacer diversos elementos, o trucos...
 \subsection{Estudio herramientas}
-Uno de los principales puntos de este proyectos ha sido el estudio de diferentes herramientas de realidad aumentada. Para la selección de estas herramientas se siguieron varios pasos. Primero dos de las herramientas de las cuales ya se tenían algunos conocimientos debido a la importancia de las compañías ARCore de Google y ARkit de Aple. Para el resto de herramientas se procedió ha buscar las herramientas mas conocidas y con mayor recepción.
+Uno de los principales puntos de este proyectos ha sido el estudio de diferentes herramientas de realidad aumentada. Para la selección de estas herramientas se siguieron varios pasos. Primero dos de las herramientas de las cuales ya se tenían algunos conocimientos debido a la importancia de las compañías ARCore de Google y ARkit de Apple. Para el resto de herramientas se procedió ha buscar las herramientas mas conocidas y con mayor recepción.
 \subsection{Desarrollo en Unity}
 Para desarrollar un ejemplo que aplicara las herramientas estudiadas, se tuvo en cuenta aquellos entornos con los eran compatible, ademas de a ser posible buscar un entorno gratuito. Unity se trataba del que mejor concordaba con las características en la mayoría de herramientas. Ademas de que cuenta con um amplio manual de usuario, y un gran apoyo de la comunidad.
 \subsection{Desarrollo en CoSpace}
