--- a/Documentación/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/tex/2_Objetivos_del_proyecto.tex
@@ -1,16 +1,19 @@
 \capitulo{2}{Objetivos del proyecto}
 
 \subsection{Objetivos generales}
-El proyecto tiene por objetivo proponer entornos de desarrollo de aplicaciones de Realidad Aumentada basados en herramientas libres, de código abierto. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV, u otros.
+El proyecto tiene por objetivo hacer un análisis exhaustivo de entornos de desarrollo de aplicaciones de Realidad Aumentada basados en herramientas libres, de código abierto. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV, u otros.
 
 Se espera de entre las herramientas propuestas poder conocer sus ventajas y desventajas, la viabilidad de su uso en comparación con otras. Mediante una tabla comparativa en la que observar fácilmente sus características principales.
 
-Crear un ejemplo desarrollado con las herramientas estudiadas, en el cual se puedan apreciar las cualidades y las ventajas de estas tecnologías que pueden ofrecer, por ejemplo en campos como el de la educación.
+Además, se creará un ejemplo desarrollado con las herramientas estudiadas, en el cual se puedan apreciar las cualidades y las ventajas de estas tecnologías que pueden ofrecer, por ejemplo en campos como el de la educación.
 
-Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube(enlace) como uso .....
+Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube\ref{section:mergecube}. El objetivo de su uso, será demostrar la utilidad del Mergecube con la realidad aumentada.
+
+ 
 
 \subsection{Objetivos Técnicos}
 \begin{itemize}
+\item Realizar un estudio detallado del estado del arte de tecnologías de Realidad Aumentada. 	
 \item Utilizar Unity para el desarrollo de un ejemplo que ponga en práctica las herramientas AR.
 \item Uso de MergeCube como herramienta sobre la que construir el ejemplo.
 \item Uso de una herramienta de AR compatible con Unity.
