Añadida estructura de directorios.

--- a/Documentación/tex/D_Manual_programador.tex
+++ b/Documentación/tex/D_Manual_programador.tex
@@ -4,6 +4,28 @@
 En este apartado se explicaran los pasos para la instalación y ejecución de las herramientas con las que se deberá trabajar.
 
 \section{Estructura de directorios}
+En este apartado se procederá a dar una breve explicación de la estructura que ha seguido los directorios del proyecto.\\
+
+\dirtree{%
+.1 /.
+.2 Documentación/ Documentación: memoria y los anexos.
+.3 img/ Imágenes de la documentación.
+.3 text/ Archivos latex de la documentación.
+.3 anexos.Pdf  Anexos.
+.3 memoria.Pdf memoria.
+.2 Ejemplo/ Ejemplo de realidad aumentada.
+.3 Plant-test/ Ejemplo de realidad aumentada.
+.4 Assest/ Assests del proyecto.
+.4 Library/ Librerías usadas en el proyecto.
+.4 Logs/ ...
+.4 obj/ ...
+.4 Packages/ ...
+.4 ProjectSettings/ ...
+.4 QCAR/ ...
+.3 APK/ Apk de la aplicación.
+}
+
+
 
 \section{Manual del programador}
 \subsection{Unity}
