--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -9,6 +9,7 @@
 \usepackage{lmodern} % scalable font
 \usepackage{microtype}
 \usepackage{placeins}
+\usepackage{dirtree}
 
 \RequirePackage{booktabs}
 \RequirePackage[table]{xcolor}
@@ -29,6 +30,13 @@
 
 % Párrafos
 \nonzeroparskip
+% Huérfanas y viudas
+\widowpenalty100000
+\clubpenalty100000
+
+% Evitar solapes en el header
+\nouppercaseheads
+
 
 
 % Imagenes
