Mejoras en anexos

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -109,7 +109,7 @@ Otro de los objetivos será el de completar la tabla comparativa añadida en el 
 
  Para este sprint me centraré en dejar la aplicación en una versión cercana a la definitiva, para ello me concentraré en corregir los pequeños bugs que aun puedan quedar. Durante la reunión mientras mostraba los progresos de la semana anterior, nos dimos cuenta de dos bugs. El primero y mas importante, se trata de que el progreso de los niveles, no se reinicia al cambiar a otra planta, es decir en el caso de que se haya completado todas las fases o nos quedemos a la mitad, si volvemos al menú y escogemos otra planta o otro modo distinto, el progreso será el mismo de antes, por lo que no se podrá avanzar adecuadamente. Otro de los bugs vistos se trata de al finalizar el tiempo máximo del que se dispone para realizar las tareas, salta un mensaje de texto para informar de que se ha acabado el tiempo, este mensaje no se ve adecuadamente debido al encuadre y al tamaño de la fuente. También será un objetivo, el revisar la aplicación en busca de posibles bugs importantes como los indicados anteriormente para añadirlos, y resolverlos durante este sprint.
  
- El otro punto del sprint es centrase en los apartados de los anexos y la memoria que están menos avanzados.
+ El otro punto del sprint es centrarse en los apartados de los anexos y la memoria que están menos avanzados.
  
 \section{Estudio de viabilidad}
 
@@ -132,11 +132,62 @@ El resto de tarifas que posee CoSpaces, su principal característica es el núme
 La tarifa que sería recomendable se trata de la primera ofertada en el plan Pro, ya que aunque se vaya a utilizar con un número de alumnos superior al ofertado, sería posible organizarse por turnos.
 
 \subsubsection{Costes Personal}
-El proyecto ha sido desarrollado por una única persona, durante un periodo de seis meses a tiempo parcial.
+El proyecto ha sido desarrollado por una única persona, durante un periodo de X meses a tiempo parcial. Se considerará un salario de 1000\euro.
+
+Para calcular los porcentajes de cotización de la seguridad social, se tendrá en cuenta los datos de 2020, 23,6\% la empresa y 4,7\% trabajadores.
+
+En la tabla \ref{tabla:costesPersonal}
+
+El coste de personal total será de X\euro.
+
+\tablaSmall{Costes Personal}{l c }{costesPersonal}{\multicolumn{1}{l}{}& Coste\\}{
+	Salario & 1000\euro \\
+	Seguridad social& ?\euro  \\
+	IRPF& ?\euro  \\
+	\midrule
+	Total& \\}
 
 \subsubsection{Costes Material}
-Mergecube...
+Para el proyecto se ha requerido de algunos gastos en hardware y software.
+
+\begin{itemize}
+	\item Hardware:
+	Se tendrá en cuenta el equipo con el se ha desarrollado la aplicación, un ordenador valorado en 1100\euro. Una WebCam valorada en ?\euro, para realizar pruebas en el ordenador. Y un smartphone valorado en 210\euro. El Mergecube con un coste de 19.99\euro. En la tabla \ref{tabla:costesHardware} se pueden apreciar los costes agrupados.
+	\item Software: Algunas de las herramientas software que se han utilizado en el proyecto se traban de software gratuitos, o se han utilizado unicamente las pruebas o niveles gratuitos que ofrecen. Por el contrarío en algunos casos ha sido necesario, recurrir al pago. Uno de los casos es con CoSpaces, realizando una prueba de un mes, a un coste de ?\euro. En la tabla \ref{tabla:costesSoftware} se pueden apreciar los costes agrupados.
+\end{itemize}
+
+
+
+Los costes totales de material, son de X.
+
+
+\tablaSmall{Costes hardware}{l c c}{costesHardware}{\multicolumn{1}{l}{}& Coste & Amortización\\}{
+	MergeCube& 19,99\euro&?\euro \\
+	Ordenador& 1100\euro&?\euro  \\
+	WebCam& 70\euro&?\euro  \\
+	SmartPhone& 210\euro&?\euro  \\
+	\midrule
+	Total& &\\}
+
+\tablaSmall{Costes software}{l c c }{costesSoftware}{\multicolumn{1}{l}{}& Coste & Amortización\\}{
+	Windows 10& 145\euro&?\euro \\
+	CoSapaces& ?\euro&?\euro  \\
+	\midrule
+	Total& &\\}
+
 \subsubsection{Costes Totales}
+	El coste total durante el desarrollo, es de X. Ver tabla \ref{tabla:costesTotales}
+\tablaSmall{Costes Totales}{l c  }{costesTotales}{\multicolumn{1}{l}{}& Coste\\}{
+	Personal& \euro \\
+	Hardware& ?\euro  \\
+	Software& ?\euro  \\
+	\midrule
+	Total& \\}
+
 \subsection{Viabilidad legal}
 
+.
+.
+.
+El proyecto se han utilizado recursos para Unity de licencia gratuita mayoritariamente. Se tratan de algunos modelos 3D, imágenes, o Fonts que contaban con una licencia Creative Commons Atribution\footnote{\url{https://creativecommons.org/licenses/by/4.0/}} para su uso.
 
