--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -4,7 +4,7 @@
 En el presente anexo se detallan los objetivos generales de la aplicación desarrollada y el catálogo de requisitos funcionales y no funcionales así como los diagramas de casos de uso.
 \section{Objetivos generales}
 \begin{itemize}
-	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada, 
+	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada. 
 	\item Realizar una aplicación para el ámbito educativo, empleando las aplicaciones AR estudiadas.
 	\item Utilizar MergeCube para el diseño e implementación de la aplicación.
 	\item Como ejercicio se ha diseñado el crecimiento de una planta, en el que se representaría las principales fases del crecimiento. Sería para usar en clases de biología de primaria/secundaria.
@@ -13,7 +13,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \section{Catálogo de requisitos}
 \subsection{Requisitos Funcionales}
  \begin{itemize}
-	\item \textbf{RF 1:}Crear una aplicación educativa.
+	\item \textbf{RF 1:} Crear una aplicación educativa.
 	\begin{itemize}
 	\item \textbf{RF 1.1:} Permitir que el usuario configure el nivel.
 	\item \textbf{RF 1.2:} Reconocer los niveles que ya han sido completados y distinguirlos de los demás.
